import { MigrationInterface, QueryRunner } from 'typeorm';

/** Forward-only expansion of the first development schema. */
export class CanonicalWorkflows1770000001000 implements MigrationInterface {
  async up(q: QueryRunner): Promise<void> {
    await q.query(`
      CREATE TABLE IF NOT EXISTS programs (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), code varchar(50) UNIQUE NOT NULL, name varchar(200) NOT NULL, active boolean NOT NULL DEFAULT true, timezone varchar(100) NOT NULL DEFAULT 'Asia/Ho_Chi_Minh', created_at timestamptz NOT NULL DEFAULT now());
      CREATE TABLE IF NOT EXISTS academic_terms (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), program_id uuid NOT NULL REFERENCES programs(id), name varchar(100) NOT NULL, starts_on date NOT NULL, ends_on date NOT NULL CHECK (ends_on >= starts_on), timezone varchar(100), UNIQUE(program_id,name));
      CREATE TABLE IF NOT EXISTS supervisor_profiles (user_id uuid PRIMARY KEY REFERENCES users(id), title varchar(120), department varchar(120));
      CREATE TABLE IF NOT EXISTS placement_supervisor_assignments (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), placement_id uuid NOT NULL REFERENCES placements(id), supervisor_user_id uuid NOT NULL REFERENCES users(id), assigned_by_user_id uuid NOT NULL REFERENCES users(id), reason text, assigned_at timestamptz NOT NULL DEFAULT now(), revoked_at timestamptz, revoked_by_user_id uuid REFERENCES users(id), revocation_reason text);
      CREATE UNIQUE INDEX IF NOT EXISTS active_placement_supervisor_assignment ON placement_supervisor_assignments(placement_id) WHERE revoked_at IS NULL;
      CREATE TABLE IF NOT EXISTS reporting_periods (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), placement_id uuid NOT NULL REFERENCES placements(id), week_start date NOT NULL, week_end date NOT NULL, due_at timestamptz NOT NULL, CHECK (week_end = week_start + 6), UNIQUE(placement_id,week_start));
      CREATE TABLE IF NOT EXISTS documents (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), owner_user_id uuid NOT NULL REFERENCES users(id), object_key varchar(512) UNIQUE NOT NULL, original_name varchar(255) NOT NULL, content_type varchar(127) NOT NULL, size_bytes bigint NOT NULL CHECK(size_bytes > 0), sha256 char(64) NOT NULL, state varchar(20) NOT NULL DEFAULT 'PENDING', created_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now());
      CREATE TABLE IF NOT EXISTS student_documents (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), student_id uuid NOT NULL REFERENCES users(id), document_id uuid NOT NULL REFERENCES documents(id), kind varchar(30) NOT NULL DEFAULT 'OTHER', is_default_cv boolean NOT NULL DEFAULT false, created_at timestamptz NOT NULL DEFAULT now(), UNIQUE(student_id,document_id));
      CREATE UNIQUE INDEX IF NOT EXISTS one_default_cv_per_student ON student_documents(student_id) WHERE is_default_cv;
      CREATE TABLE IF NOT EXISTS weekly_reports (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), placement_id uuid NOT NULL REFERENCES placements(id), reporting_period_id uuid NOT NULL REFERENCES reporting_periods(id), state varchar(30) NOT NULL DEFAULT 'DRAFT', draft_accomplishments text, draft_challenges text, draft_next_week_plan text, draft_saved_at timestamptz, current_version_no integer NOT NULL DEFAULT 0, created_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now(), UNIQUE(reporting_period_id));
      CREATE TABLE IF NOT EXISTS report_versions (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), report_id uuid NOT NULL REFERENCES weekly_reports(id), version_no integer NOT NULL, accomplishments text NOT NULL CHECK(length(trim(accomplishments)) > 0), challenges text NOT NULL CHECK(length(trim(challenges)) > 0), next_week_plan text NOT NULL CHECK(length(trim(next_week_plan)) > 0), submitted_by_user_id uuid NOT NULL REFERENCES users(id), submitted_at timestamptz NOT NULL DEFAULT now(), UNIQUE(report_id,version_no));
      CREATE TABLE IF NOT EXISTS report_reviews (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), report_version_id uuid NOT NULL UNIQUE REFERENCES report_versions(id), outcome varchar(30) NOT NULL, feedback text, reviewed_by_user_id uuid NOT NULL REFERENCES users(id), reviewed_at timestamptz NOT NULL DEFAULT now(), CHECK(outcome <> 'REVISION_REQUESTED' OR length(trim(coalesce(feedback,''))) > 0));
      CREATE TABLE IF NOT EXISTS report_draft_documents (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), report_id uuid NOT NULL REFERENCES weekly_reports(id), document_id uuid NOT NULL REFERENCES documents(id), UNIQUE(report_id,document_id));
      CREATE TABLE IF NOT EXISTS report_version_documents (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), report_version_id uuid NOT NULL REFERENCES report_versions(id), document_id uuid NOT NULL REFERENCES documents(id), UNIQUE(report_version_id,document_id));
      CREATE TABLE IF NOT EXISTS self_assessments (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), placement_id uuid NOT NULL UNIQUE REFERENCES placements(id), status varchar(20) NOT NULL DEFAULT 'DRAFT', ratings jsonb NOT NULL DEFAULT '{}'::jsonb, reflection text, learning_outcomes text, submitted_at timestamptz, updated_at timestamptz NOT NULL DEFAULT now());
      CREATE TABLE IF NOT EXISTS performance_evaluations (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), placement_id uuid NOT NULL UNIQUE REFERENCES placements(id), author_user_id uuid NOT NULL REFERENCES users(id), status varchar(20) NOT NULL DEFAULT 'DRAFT', ratings jsonb NOT NULL DEFAULT '{}'::jsonb, comments text, completion_decision varchar(20) NOT NULL DEFAULT 'PENDING', submitted_at timestamptz, updated_at timestamptz NOT NULL DEFAULT now());
      CREATE TABLE IF NOT EXISTS audit_events (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), subject_type varchar(80) NOT NULL, subject_id uuid NOT NULL, event_type varchar(100) NOT NULL, actor_user_id uuid REFERENCES users(id), payload jsonb NOT NULL DEFAULT '{}'::jsonb, occurred_at timestamptz NOT NULL DEFAULT now());
      CREATE INDEX IF NOT EXISTS audit_subject_idx ON audit_events(subject_type,subject_id,occurred_at DESC);
      CREATE TABLE IF NOT EXISTS ai_jobs (id uuid PRIMARY KEY DEFAULT gen_random_uuid(), requested_by_user_id uuid NOT NULL REFERENCES users(id), kind varchar(30) NOT NULL, posting_id uuid REFERENCES postings(id), report_version_id uuid REFERENCES report_versions(id), input_fingerprint char(64) NOT NULL, input_snapshot jsonb NOT NULL, prompt_version varchar(80) NOT NULL DEFAULT 'v1', status varchar(20) NOT NULL DEFAULT 'PENDING', attempts smallint NOT NULL DEFAULT 0, available_at timestamptz NOT NULL DEFAULT now(), completed_at timestamptz, generated_content text, error_code varchar(80), created_at timestamptz NOT NULL DEFAULT now(), CHECK ((kind='MATCH_EXPLANATION' AND posting_id IS NOT NULL AND report_version_id IS NULL) OR (kind='REPORT_SUMMARY' AND report_version_id IS NOT NULL AND posting_id IS NULL)));
      CREATE INDEX IF NOT EXISTS ai_jobs_available_idx ON ai_jobs(status,available_at);
      CREATE UNIQUE INDEX IF NOT EXISTS ai_jobs_reuse_idx ON ai_jobs(requested_by_user_id,kind,input_fingerprint,prompt_version) WHERE status IN ('PENDING','PROCESSING','SUCCEEDED');
      ALTER TABLE notifications ADD COLUMN IF NOT EXISTS target_type varchar(40), ADD COLUMN IF NOT EXISTS reporting_period_id uuid, ADD COLUMN IF NOT EXISTS dedupe_key text;
      CREATE UNIQUE INDEX IF NOT EXISTS notifications_dedupe_idx ON notifications(dedupe_key) WHERE dedupe_key IS NOT NULL;
      ALTER TABLE placements ADD COLUMN IF NOT EXISTS reporting_timezone varchar(100) NOT NULL DEFAULT 'Asia/Ho_Chi_Minh', ADD COLUMN IF NOT EXISTS ended_at timestamptz, ADD COLUMN IF NOT EXISTS ended_by_user_id uuid;
    `);
  }
  async down(q: QueryRunner): Promise<void> { await q.query('DROP TABLE IF EXISTS ai_jobs, audit_events, performance_evaluations, self_assessments, report_version_documents, report_draft_documents, report_reviews, report_versions, weekly_reports, student_documents, documents, reporting_periods, placement_supervisor_assignments, supervisor_profiles, academic_terms, programs CASCADE'); }
}
